tree-sitter-taskpaper/test/corpus/edge-cases.txt
================================================================================
Blank lines between items do not break nesting
================================================================================
Home:

	- buy milk

	- water plants

Work:
--------------------------------------------------------------------------------

(document
  (project
    name: (text)
    (task
      (marker)
      (text))
    (task
      (marker)
      (text)))
  (project
    name: (text)))

================================================================================
No trailing newline
================================================================================
- last line
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)))

================================================================================
Empty task
================================================================================
-
--------------------------------------------------------------------------------

(document
  (task
    (marker)))

================================================================================
Task with only tags
================================================================================
- @done
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (tag
      name: (tag_name))))

================================================================================
Dedent to a level not on the stack
================================================================================
A:
			- deep
	middle note
--------------------------------------------------------------------------------

(document
  (project
    name: (text)
    (task
      (marker)
      (text)))
  (note
    (text)))

================================================================================
Leading blank lines
================================================================================

Home:
--------------------------------------------------------------------------------

(document
  (project
    name: (text)))

================================================================================
Lone at-sign stays text
================================================================================
- email me @ home
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)))

================================================================================
Project name with colon inside
================================================================================
Re: planning:
	- item
--------------------------------------------------------------------------------

(document
  (project
    name: (text)
    (task
      (marker)
      (text))))

================================================================================
Bare colon line is a project with no name
================================================================================
:
--------------------------------------------------------------------------------

(document
  (project))

================================================================================
Empty tag value
================================================================================
- thing @done()
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)
    (tag
      name: (tag_name))))

================================================================================
Tag value with colon does not make a project
================================================================================
- meet @at(10:30)
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)
    (tag
      name: (tag_name)
      value: (tag_value))))

================================================================================
Nested parens in value make it plain text
================================================================================
- odd @note(a(b))
--------------------------------------------------------------------------------

(document
  (task
    (marker)
    (text)))
